# catalyst

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md
include/: board.hpp  command_manager.hpp  commands.hpp  uci.hpp  version.hpp
include/engine/: engine.hpp  evaluation.hpp  move_orderer.hpp  search.hpp  transposition.hpp
include/utils/: threading.hpp
src/: board.cpp  commands.cpp  main.cpp  uci.cpp
src/engine/: engine.cpp  evaluation.cpp  move_orderer.cpp  search.cpp  transposition.cpp
src/utils/: threading.cpp
